<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">生活故事</string>
    <string name="select_files">文件选择</string>
    <string name="action_test">测试点击</string>
    <string name="prompt_test">提示测试</string>
    <string name="action_login_enter">登录</string>
    <string name="action_login_exitapp">注销APP</string>
    <string name="action_login_unforget_pasword">忘记密码</string>
    <string name="prompt_init_title">软件初始化</string>
    <string name="prompt_init_account">请输入公司代码</string>
    <string name="prompt_upwd_password_new">请输入新密码</string>
    <string name="prompt_upwd_password_confirm">请再次输入新密码</string>
    <string name="prompt_uinit_password_new">请输入新密码</string>
    <string name="prompt_uinit_password_confirm">请再次输入新密码</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_login_wellcome">只为让您更便捷</string>
    <string name="title_about">关于软件</string>
    <string name="title_add_friend">朋友验证</string>
    <string name="title_user_init">用户初始化</string>
    <string name="title_upadate_pwd">修改用户密码</string>
    <string name="title_day">当日已完成工序</string>
    <string name="title_change_user">切换用户</string>
    <string name="title_edit">编辑</string>
    <string name="title_findpw">找回密码</string>
    <string name="title_changepw">修改密码</string>
    <string name="title_delete_user">删除账号</string>
    <string name="title_complete">完成</string>
    <string name="title_report">举报</string>
    <string name="title_set_information">个人信息设置</string>
    <string name="title_save">保存</string>
    <string name="title_uncenter">我</string>
    <string name="title_feature">特征</string>
    <string name="title_ready">创建完美形象的秘诀</string>
    <string name="title_scanface">扫描脸部</string>
    <string name="title_selectsex">创建我的形象</string>
    <string name="title_share">分享到社区</string>
    <string name="title_publish">发表</string>
    <string name="title_home_video">社区</string>
    <string name="action_login">登录</string>
    <string name="action_exit_app">注销APP</string>
    <string name="action_unforget_pasword">忘记密码</string>
    <string name="action_user_init">用户初始化</string>
    <string name="action_back">返回</string>
    <string name="action_next">下一步</string>
    <string name="action_ok">确定</string>
    <string name="action_clear">清空</string>
    <string name="action_cancel">取消</string>
    <string name="action_click_scan"> 点击扫码 </string>
    <string name="action_serach">搜索</string>
    <string name="action_open_light">打开灯光</string>
    <string name="action_close_light">关闭灯光</string>
    <string name="action_click_screen_refresh">点击屏幕刷新</string>
    <string name="action_home">主页</string>
    <string name="action_video">推荐</string>
    <string name="action_activity">互动</string>
    <string name="action_ucenter">我的</string>
    <string name="prompt_input_account">请输入账号</string>
    <string name="prompt_password">请输入用户密码</string>
    <string name="prompt_password_old">请输入原密码</string>
    <string name="prompt_password_new">请输入新密码</string>
    <string name="prompt_password_again">请再次输入新密码</string>
    <string name="prompt_code_company">请输入公司代码</string>
    <string name="prompt_code_company_right">请输入正确的公司代码</string>
    <string name="prompt_loging">正在登录验证中...</string>
    <string name="prompt_accoutn_or_password_null">账号或密码不能为空！</string>
    <string name="prompt_loading_config">正在拉取配置信息，请稍等...</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password_set">密码设置</string>
    <string name="prompt_contact_customer_service">联系客服</string>
    <string name="prompt_check_and_update">检查更新</string>
    <string name="prompt_about_app">关于软件</string>
    <string name="prompt_input_barcode_or_qrcode">请输入流水号或条形码</string>
    <string name="prompt_copyright">广州伟为科技有限公司 版权所有</string>
    <string name="prompt_version_name">版本 V1.0.0 测试版</string>
    <string name="prompt_system_tip">系统提示！</string>
    <string name="prompt_no">序号</string>
    <string name="prompt_kh">款号</string>
    <string name="prompt_name">名称</string>
    <string name="prompt_quantity">数量</string>
    <string name="prompt_sum_price">总金额</string>
    <string name="prompt_sum_detail">数量总计：#{Quantity}， 金额总计：#{SumPrice}</string>
    <string name="prompt_job_code">#{BarCode}</string>
    <string name="prompt_job_kh">，款号：#{KH}</string>
    <string name="prompt_job_name">名称:#{Name}</string>
    <string name="prompt_job_detail">数量：#{Quantity}，金额：#{UnitPrice}，颜色:#{Color}，尺寸:#{Size}</string>
    <string name="prompt_net_error">哎哟~网络开了小差！刷新试试...</string>
    <string name="prompt_no_data">暂无相关数据...</string>
    <string name="prompt_to_refresh">下拉刷新</string>
    <string name="prompt_up_to_load">上拉加载更多</string>
    <string name="prompt_release_to_refresh">释放立即刷新</string>
    <string name="prompt_release_to_load">释放立即加载</string>
    <string name="prompt_refreshing">正在刷新&#8230;</string>
    <string name="prompt_loading">加载中，请稍后&#8230;</string>
    <string name="prompt_refresh_succeeded">刷新成功</string>
    <string name="prompt_refresh_failed">刷新失败</string>
    <string name="prompt_load_succeeded">加载成功</string>
    <string name="prompt_load_failed">加载失败</string>
    <string name="prompt_message_title">好友请求</string>
    <string name="scan_text">扫一扫</string>
    <string name="xiaomi_update_dialog_title"><xliff:g id="app_name">%1$s</xliff:g>新版本</string>
    <string name="xiaomi_update_dialog_message">推荐您立即升级到最新的<xliff:g id="version_name">%1$s</xliff:g>版\n大小: <xliff:g id="app_size">%2$s</xliff:g></string>
    <string name="xiaomi_update_dialog_message_diff">推荐您立即升级到最新的<xliff:g id="version_name">%1$s</xliff:g>版\n增量更新只需下载: <xliff:g id="app_size">%2$s</xliff:g></string>
    <string name="xiaomi_external_storage_unavailable">存储分区不可用，请检查SD卡</string>
    <string name="xiaomi_bytes_unit"><xliff:g id="size">%1$s</xliff:g>B</string>
    <string name="xiaomi_kilobytes_unit"><xliff:g id="size">%1$s</xliff:g>KB</string>
    <string name="xiaomi_megabytes_unit"><xliff:g id="size">%1$s</xliff:g>MB</string>
    <string name="xiaomi_connect_download_manager_fail">连接下载管理器失败，请在应用管理中检查下载管理器的状态</string>
    <string name="app_slogon">IM as a service</string>
    <string name="text_ack_msg">已读 </string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住讲话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音通话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指移开取消发送</string>
    <string name="release_to_cancel">手指释放取消发送</string>
    <string name="send_fail">发送失败</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除回话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认发送？</string>
    <string name="connect_failuer_toast">请检查网络或重新尝试</string>
    <string name="network_unavailable">网络连接无效,请检查网络！</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="recall">重发</string>
    <string name="msg_conference_invite">Come to the conference</string>
    <string name="msg_recall_by_self">消息已撤回</string>
    <string name="msg_recall_by_user">消息已被 %1$s 撤回</string>
    <string name="button_logout">注销</string>
    <string name="button_uploadlog">上传日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="prompt">提示</string>
    <string name="clear_records">确定要清除对话?</string>
    <string name="clear_all_records">确定要清空所有对话？</string>
    <string name="location_recv">[%s 位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="stop_record">停止录制</string>
    <string name="switch_camera">选择拍照</string>
    <string name="capture_image">Capture image</string>
    <string name="record_finish_toast">录制完成, 文件以保存在 %s</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="dynamic_expression">[dynamic expression]</string>
    <string name="Group_chat">群聊</string>
    <string name="all_members">全体成员</string>
    <string name="were_mentioned">[someone @me]</string>
    <string name="gorup_not_found">can not find group</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜索</string>
    <string name="network_isnot_available">网络连接无效</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确认转发到：%s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="user_forbidden">User is forbidden by server</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="push_settings">Message push settings</string>
    <string name="push_use_fcm">Message push use fcm</string>
    <string name="book_black">Black list</string>
    <string name="set_custom_appkey">Set custom App key</string>
    <string name="set_custom_server">Set custom servers</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Loading data</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="nickname_description">Once this nickname is set, it will be used in push notification (by default this is user ID ) when the receiver is using the iOS device.</string>
    <string name="group_chat">Group chat</string>
    <string name="chat_room">Channel</string>
    <string name="voice_and_video_conference">Voice and video conference</string>
    <string name="conference_invite_error">Did not get the meeting information, can not invite other people to join</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Debug</string>
</resources>