<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="10dp">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>

        <View
            android:id="@+id/buttonHorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/datePicker"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/buttonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonHorizontalDivider"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#333333"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/action_ok"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/clear_ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff" />

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#333333"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/action_clear"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>


            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#333333"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/action_cancel"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>