<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:orientation="vertical">

    <FrameLayout
        android:id="@id/id_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/x40">

    </FrameLayout>


    <!-- 视觉上,用单选按钮替代TabWidget -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_above="@+id/rl"
        android:background="#cdcdcd"/>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x42"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/x2"
        android:paddingTop="@dimen/x4">

        <LinearLayout
            android:id="@id/id_home"
            android:layout_width="@dimen/x40"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:orientation="vertical">

            <ImageView
                android:id="@id/id_home_icon"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icon_home_n"
                android:textSize="38sp"/>

            <TextView
                android:id="@id/id_home_label"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_home"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="@dimen/x10"
                android:layout_height="wrap_content"/>

        </LinearLayout>





        <LinearLayout
            android:id="@id/id_reportwage"
            android:layout_width="@dimen/x40"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/id_home"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:orientation="vertical">

            <ImageView
                android:id="@id/id_reportwage_icon"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/icon_video_n"
                android:textSize="38sp"/>

            <TextView
                android:id="@id/id_reportwage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/action_video"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="@dimen/x10"/>

        </LinearLayout>


        <LinearLayout
            android:id="@id/id_what1"
            android:layout_width="@dimen/x40"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_toRightOf="@id/id_reportwage"
            android:layout_marginRight="@dimen/x20"
            android:orientation="vertical">

            <ImageView
                android:id="@id/id_what1_icon"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icon_interactive_n"
                android:textSize="38sp"/>

            <TextView
                android:id="@id/id_what1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/action_activity"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="@dimen/x10"/>

        </LinearLayout>



        <LinearLayout
            android:id="@id/id_ucenter"
            android:layout_width="@dimen/x40"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_toRightOf="@id/id_what1"
            android:layout_marginRight="@dimen/x20"
            android:orientation="vertical">

            <ImageView
                android:id="@id/id_ucenter_icon"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icon_my_n"
                android:textSize="38sp"/>

            <TextView
                android:id="@id/id_ucenter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/action_ucenter"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="@dimen/x10"/>

        </LinearLayout>
    </RelativeLayout>

<!--    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/icon_weibo"/>-->

</RelativeLayout>
